# ceres_avx_test

./: CMakeLists.txt  README.txt
src/: point2.h  point2linedistance.cpp  point2linedistance.h  test_ceres.cpp  test_cost_function.cpp  test_cost_function.h
